-*- outline -*-

This file contains information about the version numbers
and what's changed.
Hopefully, the #defines ETHERIP_MAYOR and ETHERIP_MINOR
in ether_ipApp/src/drvEtherIP.h are updated accordingly,
so that you can see the current version at runtime via
drvEtherIP_report.

* 2021, Feb 5 ether_ip-3-3
When a multi-request transfer fails, include request/response
size info to determine how close we got to the buffer limit:

EIP process_ScanList: Error in response
Tag 0: 'testStr2'
Tag 1: 'DINT'
CIP_MultiRequest reply: general status 0x00 (Ok)
   2 subreplies:
   0) service 0xCC (CIP_ReadData-Reply), status 0x06 (Buffer too small, partial data only)
   1) service 0xCC (CIP_ReadData-Reply), ...
Request size: 36 bytes, response size: 116, buffer limit: 450


* 2020, Jan 16
Add Manual.md, based on ether_ipApp/doc/readme.txt,
with updates in a slightly modernized format.
Also tweaked output of drvEtherIP_help.

* 2019, Nov 15 ether_ip-3-2
Builds against EPICS 7 no longer generate warnings about the deprecation of
the 'rset' data type.

* 2019, Nov 13
When built against Base-3.15.1 or higher, provide device support for the lsi and
lso (long string input/output) record types. The module can still be built
against earlier Base versions.

Hints for using lsi, lso records:
1) Set field SIZV in the lsi/lso records to the maximum string length.
   The driver always adds a '\0' terminator, so with  

     field(SIZV, 60)

   the maximum usable character count is 59.
2) Via `cainfo`, the record reports a data type of DBR_STRING,
   so a plain `caget` or `caput` will still be limited to 40 characters.
   To access the full string, one needs to read/write the `VAL$` field,
   which causes the IOC (Channel Access Server) to provide a 
   DBR_CHAR datatype with element count based on SIZV.
3) Client then needs to access the character waveform as a 'long string',
   which is selected via the `-S` option of caget/caput:
